@@ -13,7 +13,9 @@ The release team should empty this file after each release.
 
 ***
 
-REPLACE ME WITH CONTENT...
+The random crashes when resizing the MP lobby should now be fixed (they also
+sometimes occurred at random when in the lobby due to new games/players). 
+Please report if you still run into these crashes.
 
 ***
 
